download: refactor